[gd_scene load_steps=28 format=3 uid="uid://bbjstf85fr5rt"]

[ext_resource type="Script" uid="uid://cuuvw0l1crx3c" path="res://main.gd" id="1_4c57u"]
[ext_resource type="PackedScene" uid="uid://clxn22tygjcrs" path="res://sub_viewport.tscn" id="2_dg77c"]
[ext_resource type="Texture2D" uid="uid://dicniwkl0n2co" path="res://icon.svg" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://cehjluk2aqcls" path="res://Pgi.png" id="3_4c57u"]
[ext_resource type="Texture2D" uid="uid://0une1hsvbt0d" path="res://Untitled 11-29-2025 07-48-44.png" id="3_efxa6"]
[ext_resource type="FontFile" uid="uid://f71bj77sai0j" path="res://brackeys_platformer_assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="4_1bvp3"]
[ext_resource type="FontFile" uid="uid://bpkf7uptm5hk4" path="res://brackeys_platformer_assets/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="4_dg77c"]
[ext_resource type="Texture2D" uid="uid://gpmvdij0o52t" path="res://pngtree-white-sugar-png-image_12837048.png" id="5_kek77"]
[ext_resource type="Texture2D" uid="uid://jrn3i80juoa6" path="res://Untitled 09-15-2025 11-02-53.png" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://blg30ge8d1jst" path="res://brackeys_platformer_assets/brackeys_platformer_assets/sprites/Untitled 11-08-2025 05-06-59.png" id="8_5vw27"]
[ext_resource type="AudioStream" uid="uid://dlpmswxpxi0cf" path="res://miscellaneous-thoughts-246558.mp3" id="8_efxa6"]
[ext_resource type="Texture2D" uid="uid://dp26prjj8evy5" path="res://Untitled 11-29-2025 07-32-25.png" id="8_ycdy4"]
[ext_resource type="Texture2D" uid="uid://de0nfmvcjecld" path="res://imported/Untitled 12-03-2025 08-32-32.png" id="9_w48qg"]
[ext_resource type="Script" uid="uid://1hk5timw24ih" path="res://configuraciones.gd" id="12_dg77c"]

[sub_resource type="ViewportTexture" id="ViewportTexture_ycdy4"]
viewport_path = NodePath("TextureRect/SubViewport")

[sub_resource type="GDScript" id="GDScript_272bh"]
script/source = "extends Control

@onready var ML = $\"../Label2\"
var A = 0
var B = 0
var C = 0
var D = 0
var E = 0
var F = 0
var G = 0
var H = 0
var AS = 0
var BS = 0
var CS = 0
var DS = 0
var ES = 0
var FS = 0
var GS = 0
var HS = 0
var S = 0
var _EA1_v = GlobalData.estado_objetos.get(\"EA1\", false)
var _EA2_v = GlobalData.estado_objetos.get(\"EA2\", false)
var _EB1_v = GlobalData.estado_objetos.get(\"EB1\", false)
var _EB2_v = GlobalData.estado_objetos.get(\"EB2\", false)
var _EC1_v = GlobalData.estado_objetos.get(\"EC1\", false)
var _EC2_v = GlobalData.estado_objetos.get(\"EC2\", false)
var _ED1_v = GlobalData.estado_objetos.get(\"ED1\", false)
var _ED2_v = GlobalData.estado_objetos.get(\"ED2\", false)
var _EE1_v = GlobalData.estado_objetos.get(\"EE1\", false)
var _EE2_v = GlobalData.estado_objetos.get(\"EE2\", false)
var _EF1_v = GlobalData.estado_objetos.get(\"EF1\", false)
var _EF2_v = GlobalData.estado_objetos.get(\"EF2\", false)
var _EG1_v = GlobalData.estado_objetos.get(\"EG1\", false)
var _EG2_v = GlobalData.estado_objetos.get(\"EG2\", false)
var _EH1_v = GlobalData.estado_objetos.get(\"EH1\", false)
var _EH2_v = GlobalData.estado_objetos.get(\"EH2\", false)

func _ready() -> void:
	$\"../AnimationPlayer\".play(\"Quieto\")
	$\"../EA1\".visible = false
	$\"../EA2\".visible = false
	$\"../AnimationPlayer\".play(\"Quieto\")
	$\"../polvo\".visible = false
	$Mezclar.visible = false
	$Reset.visible = false
	ML.visible = false
	
	
	if _EA1_v:
		$\"../EA1\".visible = true
		$\"../EA1/Sprite2D\".frame = 0
	if _EB1_v:
		$\"../EA1\".visible = true
		$\"../EA1/Sprite2D\".frame = 1
	if _EC1_v:
		$\"../EA1\".visible = true
		$\"../EA1/Sprite2D\".frame = 2
	if _ED1_v:
		$\"../EA1\".visible = true
		$\"../EA1/Sprite2D\".frame = 3
	if _EE1_v:
		$\"../EA1\".visible = true
		$\"../EA1/Sprite2D\".frame = 4
	if _EF1_v:
		$\"../EA1\".visible = true
		$\"../EA1/Sprite2D\".frame = 5
	if _EG1_v:
		$\"../EA1\".visible = true
		$\"../EA1/Sprite2D\".frame = 6
	if _EH1_v:
		$\"../EA1\".visible = true
		$\"../EA1/Sprite2D\".frame = 7
	if _EA2_v:
		$\"../EA2\".visible = true
		$\"../EA2/Sprite2D\".frame = 0
	if _EB2_v:
		$\"../EA2\".visible = true
		$\"../EA2/Sprite2D\".frame = 1
	if _EC2_v:
		$\"../EA2\".visible = true
		$\"../EA2/Sprite2D\".frame = 2
	if _ED2_v:
		$\"../EA2\".visible = true
		$\"../EA2/Sprite2D\".frame = 3
	if _EE2_v:
		$\"../EA2\".visible = true
		$\"../EA2/Sprite2D\".frame = 4
	if _EF2_v:
		$\"../EA2\".visible = true
		$\"../EA2/Sprite2D\".frame = 5
	if _EG2_v:
		$\"../EA2\".visible = true
		$\"../EA2/Sprite2D\".frame = 6
	if _EH2_v:
		$\"../EA2\".visible = true
		$\"../EA2/Sprite2D\".frame = 7

func _on_configuranción_pressed() -> void:
	get_tree().change_scene_to_file(\"res://node_3d.tscn\")

func _on_ea_1_pressed() -> void:
	$\"../EA1\".visible = false
	if $\"../EA1/Sprite2D\".frame == 0:
		GlobalData.estado_objetos[\"EA1\"] = false
		AS = A + 2
		if CS>0 or GS>0:
			$\"../ColorRect3\".color =Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		elif BS>0 or DS>0 or ES>0 or FS>0 or HS>0:
			$\"../ColorRect2\".color =Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		else:
			$\"../ColorRect2\".color =Color(0.75, 0.686, 0.997, 0.557)
	if $\"../EA1/Sprite2D\".frame == 1:
		GlobalData.estado_objetos[\"EB1\"] = false
		BS = B + 2
		$\"../polvo\".visible = true
		if CS>0 or GS>0 or AS>0:
			$Mezclar.visible = true
		if $\"../EA2/Sprite2D\".frame == 1 or $\"../EA2/Sprite2D\".frame == 3 or $\"../EA2/Sprite2D\".frame == 4 or $\"../EA2/Sprite2D\".frame == 5 or $\"../EA2/Sprite2D\".frame == 7:
			$\"../EA2\".disabled = true
	if $\"../EA1/Sprite2D\".frame == 2:
		GlobalData.estado_objetos[\"EC1\"] = false
		CS = C + 2
		if AS>0 or GS>0:
			$\"../ColorRect3\".color = Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		elif BS>0 or DS>0 or ES>0 or FS>0 or HS>0:
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		else:
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
	if $\"../EA1/Sprite2D\".frame == 3:
		GlobalData.estado_objetos[\"ED1\"] = false
		DS = D + 2
		$\"../polvo\".visible = true
		if $\"../EA2/Sprite2D\".frame == 1 or $\"../EA2/Sprite2D\".frame == 3 or $\"../EA2/Sprite2D\".frame == 4 or $\"../EA2/Sprite2D\".frame == 5 or $\"../EA2/Sprite2D\".frame == 7:
			$\"../EA2\".disabled = true
		if CS>0 or GS>0 or AS>0:
			$Mezclar.visible = true
	if $\"../EA1/Sprite2D\".frame == 4:
		GlobalData.estado_objetos[\"EE1\"] = false
		ES = E + 2
		$\"../polvo\".visible = true
		if $\"../EA2/Sprite2D\".frame == 1 or $\"../EA2/Sprite2D\".frame == 3 or $\"../EA2/Sprite2D\".frame == 4 or $\"../EA2/Sprite2D\".frame == 5 or $\"../EA2/Sprite2D\".frame == 7:
			$\"../EA2\".disabled = true
		if CS>0 or GS>0 or AS>0:
			$Mezclar.visible = true
	if $\"../EA1/Sprite2D\".frame == 5:
		GlobalData.estado_objetos[\"EF1\"] = false
		FS = F + 2
		$\"../polvo\".visible = true
		if $\"../EA2/Sprite2D\".frame == 1 or $\"../EA2/Sprite2D\".frame == 3 or $\"../EA2/Sprite2D\".frame == 4 or $\"../EA2/Sprite2D\".frame == 5 or $\"../EA2/Sprite2D\".frame == 7:
			$\"../EA2\".disabled = true
		if CS>0 or GS>0 or AS>0:
			$Mezclar.visible = true
	if $\"../EA1/Sprite2D\".frame == 6:
		GlobalData.estado_objetos[\"EG1\"] = false
		GS = G + 2
		if CS>0 or AS>0:
			$\"../ColorRect3\".color = Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		elif BS>0 or DS>0 or ES>0 or FS>0 or HS>0:
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		else:
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
	if $\"../EA1/Sprite2D\".frame == 7:
		GlobalData.estado_objetos[\"EH1\"] = false
		HS = H + 2
		$\"../polvo\".visible = true
		if CS>0 or GS>0 or AS>0:
			$Mezclar.visible = true
		if $\"../EA2/Sprite2D\".frame == 1 or $\"../EA2/Sprite2D\".frame == 3 or $\"../EA2/Sprite2D\".frame == 4 or $\"../EA2/Sprite2D\".frame == 5 or $\"../EA2/Sprite2D\".frame == 7:
			$\"../EA2\".disabled = true

func _on_ea_2_pressed() -> void:
	$\"../EA2\".visible = false
	if $\"../EA2/Sprite2D\".frame == 0:
		GlobalData.estado_objetos[\"EA2\"] = false
		AS = A + 2
		if CS>0 or GS>0:
			$\"../ColorRect3\".color = Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		elif BS>0 or DS>0 or ES>0 or FS>0 or HS>0:
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		else:
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
	if $\"../EA2/Sprite2D\".frame == 1:
		GlobalData.estado_objetos[\"EB2\"] = false
		BS = B + 2
		$\"../polvo\".visible = true
		if $\"../EA1/Sprite2D\".frame == 1 or $\"../EA1/Sprite2D\".frame == 3 or $\"../EA1/Sprite2D\".frame == 4 or $\"../EA1/Sprite2D\".frame == 5 or $\"../EA1/Sprite2D\".frame == 7:
			$\"../EA1\".disabled = true
		if CS>0 or GS>0 or AS>0:
			$Mezclar.visible = true
	if $\"../EA2/Sprite2D\".frame == 2:
		GlobalData.estado_objetos[\"EC2\"] = false
		CS = C + 2
		if AS>0 or GS>0:
			$\"../ColorRect3\".color = Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		elif BS>0 or DS>0 or ES>0 or FS>0 or HS>0:
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		else:
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
	if $\"../EA2/Sprite2D\".frame == 3:
		GlobalData.estado_objetos[\"ED2\"] = false
		DS = D + 2
		$\"../polvo\".visible = true
		if $\"../EA1/Sprite2D\".frame == 1 or $\"../EA1/Sprite2D\".frame == 3 or $\"../EA1/Sprite2D\".frame == 4 or $\"../EA1/Sprite2D\".frame == 5 or $\"../EA1/Sprite2D\".frame == 7:
			$\"../EA1\".disabled = true
		if CS>0 or GS>0 or AS>0:
			$Mezclar.visible = true
	if $\"../EA2/Sprite2D\".frame == 4:
		GlobalData.estado_objetos[\"EE2\"] = false
		ES = E + 2
		$\"../polvo\".visible = true
		if $\"../EA1/Sprite2D\".frame == 1 or $\"../EA1/Sprite2D\".frame == 3 or $\"../EA1/Sprite2D\".frame == 4 or $\"../EA1/Sprite2D\".frame == 5 or $\"../EA1/Sprite2D\".frame == 7:
			$\"../EA1\".disabled = true
		if CS>0 or GS>0 or AS>0:
			$Mezclar.visible = true
	if $\"../EA2/Sprite2D\".frame == 5:
		GlobalData.estado_objetos[\"EF2\"] = false
		FS = F + 2
		$\"../polvo\".visible = true
		if $\"../EA1/Sprite2D\".frame == 1 or $\"../EA1/Sprite2D\".frame == 3 or $\"../EA1/Sprite2D\".frame == 4 or $\"../EA1/Sprite2D\".frame == 5 or $\"../EA1/Sprite2D\".frame == 7:
			$\"../EA1\".disabled = true
	if $\"../EA2/Sprite2D\".frame == 6:
		GlobalData.estado_objetos[\"EG2\"] = false
		GS = G + 2
		if CS>0 or AS>0:
			$\"../ColorRect3\".color = Color(0.75, 0.686, 0.997, 0.557)
			$Mezclar.visible = true
		elif BS>0 or DS>0 or ES>0 or FS>0 or HS>0:
			$Mezclar.visible = true
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
		else:
			$\"../ColorRect2\".color = Color(0.75, 0.686, 0.997, 0.557)
	if $\"../EA2/Sprite2D\".frame == 7:
		GlobalData.estado_objetos[\"EH2\"] = false
		HS = H + 2
		$\"../polvo\".visible = true
		if $\"../EA1/Sprite2D\".frame == 1 or $\"../EA1/Sprite2D\".frame == 3 or $\"../EA1/Sprite2D\".frame == 4 or $\"../EA1/Sprite2D\".frame == 5 or $\"../EA1/Sprite2D\".frame == 7:
			$\"../EA1\".disabled = true
		if CS>0 or GS>0 or AS>0:
			$Mezclar.visible = true




func _on_mezclar_pressed() -> void:
	$\"../ColorRect2\".color = Color(1.0, 1.0, 1.0, 0.0)
	$\"../ColorRect3\".color = Color(1.0, 1.0, 1.0, 0.0)
	$\"../polvo\".visible = false
	if AS>0 and BS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if AS>0 and CS>0:
		$\"../ColorRect\".color = Color(0.75, 0.686, 0.997, 0.557)
		ML.text = \"Ácido peracético\"
		ML.visible = true
	if AS>0 and DS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if AS>0 and ES>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if AS>0 and FS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if AS>0 and GS>0:
		$\"../ColorRect\".color = Color(0.75, 0.686, 0.997, 0.557)
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if AS>0 and HS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if BS>0 and CS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if BS>0 and GS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if CS>0 and DS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if CS>0 and ES>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if CS>0 and FS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if CS>0 and GS>0:
		$\"../ColorRect\".color = Color(0.75, 0.686, 0.997, 0.557)
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if CS>0 and HS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if DS>0 and GS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if ES>0 and GS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if FS>0 and GS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	if GS>0 and HS>0:
		$\"../ColorRect2\".color = Color()
		ML.text = \"holllllllllllaaaaaaaaa\"
		ML.visible = true
	$Reset.visible = true
	$Mezclar.visible = false

func _on_reset_pressed() -> void:
	$Reset.visible = false
	$\"../ColorRect\".color = Color(0.0, 0.0, 0.0, 0.0)
	$\"../ColorRect2\".color = Color(0.0, 0.0, 0.0, 0.0)
	$\"../ColorRect3\".color = Color(0.0, 0.0, 0.0, 0.0)
	AS = A - 2
	BS = B - 2
	CS = C - 2
	DS = D - 2
	ES = E - 2
	FS = F - 2
	GS = G - 2
	HS = H - 2
	ML.visible = false
"

[sub_resource type="Animation" id="Animation_dg77c"]
resource_name = "Agregar"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_ycdy4"]
resource_name = "Explosion"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 4]
}

[sub_resource type="Animation" id="Animation_w48qg"]
resource_name = "Mezclar"
length = 2.0

[sub_resource type="Animation" id="Animation_vivmo"]
resource_name = "Nueva receta"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(792, 558), Vector2(792, 435), Vector2(792, 435), Vector2(792, 558)]
}

[sub_resource type="Animation" id="Animation_4c57u"]
resource_name = "Quieto"
length = 1.09
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.76666665, 0.93333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_efxa6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(792, 558)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycdy4"]
_data = {
&"Agregar": SubResource("Animation_dg77c"),
&"Explosion": SubResource("Animation_ycdy4"),
&"Mezclar": SubResource("Animation_w48qg"),
&"Nueva receta": SubResource("Animation_vivmo"),
&"Quieto": SubResource("Animation_4c57u"),
&"RESET": SubResource("Animation_efxa6")
}

[sub_resource type="Animation" id="Animation_2cqfq"]
resource_name = "Mezclar"
length = 2.0

[sub_resource type="Animation" id="Animation_yaehf"]
resource_name = "Nueva Receta"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(792, 558), Vector2(792, 442.5), Vector2(792, 442.5), Vector2(792, 558)]
}

[sub_resource type="Animation" id="Animation_074og"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(792, 558)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cegan"]
_data = {
&"Mezclar": SubResource("Animation_2cqfq"),
&"Nueva Receta": SubResource("Animation_yaehf"),
&"RESET": SubResource("Animation_074og")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_4c57u")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_ycdy4")

[node name="SubViewport" parent="TextureRect" instance=ExtResource("2_dg77c")]

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(771, 378)
scale = Vector2(17.5, 17.5)
texture = ExtResource("3_4c57u")
hframes = 10

[node name="ColorRect6" type="ColorRect" parent="."]
offset_left = -82.0
offset_top = 436.0
offset_right = 1628.0
offset_bottom = 771.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 179.0
offset_top = 19.0
offset_right = 179.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_272bh")

[node name="Mezclar" type="Button" parent="Control"]
layout_mode = 0
offset_left = 435.0
offset_top = 474.00003
offset_right = 951.0
offset_bottom = 672.0
scale = Vector2(0.65, 0.65)
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Control/Mezclar"]
position = Vector2(258, 99)
texture = ExtResource("3_efxa6")
hframes = 2

[node name="Label" type="Label" parent="Control/Mezclar"]
texture_filter = 1
layout_mode = 0
offset_left = 52.0
offset_top = 67.99996
offset_right = 464.0
offset_bottom = 128.99997
theme_override_fonts/font = ExtResource("4_dg77c")
theme_override_font_sizes/font_size = 60
text = "Mezclar"

[node name="Reset" type="Button" parent="Control"]
layout_mode = 0
offset_left = 437.0
offset_top = -5.0
offset_right = 954.0
offset_bottom = 191.0
scale = Vector2(0.65, 0.65)
icon = ExtResource("2_h2yge")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Control/Reset"]
position = Vector2(258, 99)
texture = ExtResource("3_efxa6")
hframes = 2

[node name="Label" type="Label" parent="Control/Reset"]
texture_filter = 1
layout_mode = 0
offset_left = 50.76925
offset_top = 73.84616
offset_right = 545.7692
offset_bottom = 134.84616
theme_override_fonts/font = ExtResource("4_dg77c")
theme_override_font_sizes/font_size = 50
text = "Reiniciar"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 735.0
offset_top = 393.0
offset_right = 745.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 4)
size_flags_horizontal = 0
color = Color(1, 1, 1, 0)

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 735.0
offset_top = 412.5
offset_right = 745.0625
offset_bottom = 422.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 2)
color = Color(1, 1, 1, 0)

[node name="ColorRect3" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 734.0
offset_top = 392.5
offset_right = 744.0625
offset_bottom = 402.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 2)
color = Color(1, 1, 1, 0)

[node name="Configuraciones" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 163.0
offset_top = 9.0
offset_right = 203.0
offset_bottom = 49.0
script = ExtResource("12_dg77c")

[node name="Button" type="Button" parent="Configuraciones"]
layout_mode = 0
offset_left = -124.0
offset_top = 22.0
offset_right = 12.0
offset_bottom = 158.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Configuraciones/Button"]
texture_filter = 1
position = Vector2(69, 67)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_ycdy4")
hframes = 2

[node name="Button2" type="Button" parent="Configuraciones"]
layout_mode = 0
offset_left = -123.0
offset_top = 21.0
offset_right = 13.0
offset_bottom = 157.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Configuraciones/Button2"]
texture_filter = 1
position = Vector2(69, 68)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_ycdy4")
hframes = 2
frame = 1

[node name="Configuranción" type="Button" parent="Configuraciones"]
layout_mode = 0
offset_left = 1194.0
offset_top = 481.0
offset_right = 1324.0
offset_bottom = 611.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Configuraciones/Configuranción"]
texture_filter = 1
position = Vector2(66, 66)
scale = Vector2(4, 4)
texture = ExtResource("9_w48qg")
hframes = 3
frame = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(777.5, 375.5)
scale = Vector2(5, 5)
texture = ExtResource("5_lquwl")
hframes = 5
vframes = 3

[node name="polvo" type="Sprite2D" parent="."]
position = Vector2(776.5, 417.5)
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_kek77")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_efxa6")
parameters/looping = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ycdy4")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cegan")
}

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 792.0
offset_top = 558.0
offset_right = 1144.0
offset_bottom = 581.0
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("4_1bvp3")
text = "Aprendiste una nueva receta"

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = 1301.0
offset_top = 56.0
offset_right = 1405.0
offset_bottom = 161.0
color = Color(0.5264226, 0.5264226, 0.5264226, 1)

[node name="ColorRect5" type="ColorRect" parent="."]
offset_left = 1418.0
offset_top = 56.0
offset_right = 1522.0
offset_bottom = 161.0
color = Color(0.52610093, 0.52610093, 0.52610093, 1)

[node name="EA1" type="Button" parent="."]
clip_contents = true
offset_left = 1325.0
offset_top = 65.0
offset_right = 1357.0
offset_bottom = 111.0
scale = Vector2(2, 2)
focus_behavior_recursive = 1
flat = true

[node name="Sprite2D" type="Sprite2D" parent="EA1"]
texture_filter = 1
position = Vector2(17, 17)
texture = ExtResource("8_5vw27")
hframes = 8
vframes = 2

[node name="EA2" type="Button" parent="."]
clip_contents = true
offset_left = 1442.0
offset_top = 65.0
offset_right = 1474.0
offset_bottom = 111.0
scale = Vector2(2, 2)
focus_behavior_recursive = 1
flat = true

[node name="Sprite2D" type="Sprite2D" parent="EA2"]
texture_filter = 1
position = Vector2(17, 17)
texture = ExtResource("8_5vw27")
hframes = 8
vframes = 2

[node name="Label2" type="Label" parent="."]
texture_filter = 1
offset_left = 49.0
offset_top = 179.0
offset_right = 490.0
offset_bottom = 210.0
theme_override_fonts/font = ExtResource("4_1bvp3")
theme_override_font_sizes/font_size = 25

[connection signal="pressed" from="Control/Mezclar" to="Control" method="_on_mezclar_pressed"]
[connection signal="pressed" from="Control/Reset" to="Control" method="_on_reset_pressed"]
[connection signal="pressed" from="Configuraciones/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Configuraciones/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Configuraciones/Configuranción" to="Configuraciones" method="_on_configuranción_pressed"]
[connection signal="pressed" from="EA1" to="Control" method="_on_ea_1_pressed"]
[connection signal="pressed" from="EA2" to="Control" method="_on_ea_2_pressed"]
